--- a/pathfinder/templates/home/compare_categories.html
+++ b/pathfinder/templates/home/compare_categories.html
@@ -15,6 +15,7 @@ Chart.defaults.global.elements.line.fill = false
     success: function (data) {
       crimesdata_over_years = data.data
       labels = data.labels
+      document.getElementById('year').innerHTML = labels[0]
       plot_line_graph()
     },
     error:function(error) {
@@ -51,11 +52,11 @@ Chart.defaults.global.elements.line.fill = false
     <div class="sale-statistic-area">
         <div class="container">
             <div class="row">
-                <div class="col-lg-9 col-md-8 col-sm-7 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="sale-statistic-inner notika-shadow mg-tb-30">
                         <div class="curved-inner-pro">
                             <div class="curved-ctn">
-                                <h2>Crime Statistics from</h2><h2></h
+                                <h2>Crime Statistics from</h2><h2 id="year"></h2>
                                 <p></p>
                             </div>
                         </div>
