--- a/pathfinder/templates/home/compare_categories.html
+++ b/pathfinder/templates/home/compare_categories.html
@@ -56,7 +56,7 @@ Chart.defaults.global.elements.line.fill = false
                     <div class="sale-statistic-inner notika-shadow mg-tb-30">
                         <div class="curved-inner-pro">
                             <div class="curved-ctn">
-                                <h2>Crime Statistics from</h2><h2 id="year"></h2>
+                                <h2>Crime Statistics for all Categories from <span id="year"></span> </h2>
                                 <p></p>
                             </div>
                         </div>
