--- a/pathfinder/templates/partials/navbar.html
+++ b/pathfinder/templates/partials/navbar.html
@@ -17,7 +17,7 @@
                             </li>
                             <li><a href="index-3.html">Maps DATA</a>
                             </li>
-                            <li><a href="index-4.html">Statistics</a>
+                            <li><a  href="" data-toggle="modal" data-target="#categorymodal">Statistics</a>
                             </li>
                             <li><a href="{{ url_for('home.crime_comparision_view') }}">Analytics</a>
                             </li>
@@ -130,5 +130,44 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="modal fade" id="categorymodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Specify Crime and Period</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body mx-3">
+        <div class="md-form mb-5">
+          <select type="text" id="ccategory" name="category" class="form-control validate" required>
+          <option>Thefty</option>
+          <option>Rape</option>
+          <option>Murder</option>
+          </select>
+          <label data-error="wrong" data-success="right" for="ccategory">Category</label>
+        </div>
+
+        <div class="md-form mb-4">
+          <i class="sprefix grey-text"></i>
+          <input type="date" id="From_date" name="from_date" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="From_date">Period(from)</label>
+        </div>
+        <div class="md-form mb-4">
+          <i class="sprefix grey-text"></i>
+          <input type="date" id="To_date" name="to_date" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="To_date">Period(To:)</label>
+        </div>
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-default">Continue</button>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- Main Menu area End-->
