--- a/pathfinder/templates/partials/navbar.html
+++ b/pathfinder/templates/partials/navbar.html
@@ -1,4 +1,5 @@
 <!-- Main Menu area start-->
+
 <div class="main-menu-area mg-tb-40">
     <div class="container">
         <div class="row">
@@ -13,11 +14,7 @@
                         <ul class="notika-main-menu-dropdown">
                             <li><a href="{{url_for('home.admin_dashboard')}}">Dashboard</a>
                             </li>
-                            <li><a href="index-2.html">Recent Reports</a>
-                            </li>
-                            <li><a href="index-3.html">Maps DATA</a>
-                            </li>
-                            <li><a  href="" data-toggle="modal" data-target="#categorymodal">Statistics</a>
+                            <li><a href="" data-toggle="modal" data-target="#categorymodal">Statistics</a>
                             </li>
                             <li><a href="{{ url_for('home.crime_comparision_view') }}">Analytics</a>
                             </li>
@@ -133,42 +130,60 @@
 </div>
 
 <div class="modal fade" id="categorymodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Specify Crime and Period</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body mx-3">
-        <form action="{{url_for('home.analyze_crimes')}}" method="POST">
-            <div class="md-form mb-5">
-                <select type="text" id="ccategory" name="category" class="form-control validate" required>
-                <option>Thefty</option>
-                <option>Rape</option>
-                <option>Murder</option>
-                </select>
-                <label data-error="wrong" data-success="right" for="ccategory">Category</label>
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Specify Crime and Period</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
+            <div class="modal-body mx-3">
+                <form action="{{url_for('home.analyze_crimes')}}" method="POST">
+                    <div class="md-form mb-5">
+                        <select type="text" id="ccategory" name="category" class="form-control validate" required>
 
-            <div class="md-form mb-4">
-                <i class="sprefix grey-text"></i>
-                <input type="date" id="From_date" name="from_date" class="form-control validate">
-                <label data-error="wrong" data-success="right" for="From_date">Period(from)</label>
-                </div>
-            <div class="md-form mb-4">
-                <i class="sprefix grey-text"></i>
-                <input type="date" id="To_date" name="to_date" class="form-control validate">
-                <label data-error="wrong" data-success="right" for="To_date">Period(To:)</label>
+                        </select>
+                        <label data-error="wrong" data-success="right" for="ccategory">Category</label>
+                    </div>
+
+                    <div class="md-form mb-4">
+                        <i class="sprefix grey-text"></i>
+                        <input type="date" id="From_date" name="from_date" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="From_date">Period(from)</label>
+                    </div>
+                    <div class="md-form mb-4">
+                        <i class="sprefix grey-text"></i>
+                        <input type="date" id="To_date" name="to_date" class="form-control validate">
+                        <label data-error="wrong" data-success="right" for="To_date">Period(To:)</label>
+                    </div>
+                    <div class="modal-footer d-flex justify-content-center">
+                        <input type='submit' Value="Continue" class="btn btn-default">
+                    </div>
+                </form>
             </div>
-            <div class="modal-footer d-flex justify-content-center">
-                <input type='submit' Value="Continue" class="btn btn-default">
-            </div>
-         </form>
-      </div>
+        </div>
     </div>
-  </div>
 </div>
+
+<script>
+    var endpoint = '/admin/category-view/'
+    $.ajax({
+        method: "GET",
+        url: endpoint,
+        success: function (data) {
+            categories = data.categories
+            categories_option_holder = document.getElementById("ccategory")
+            for (var i = 0; i < categories.length; i++) {
+                option = document.createElement('option')
+                option.value = option.innerHTML = categories[i]
+                categories_option_holder.appendChild(option)
+            }
+        },
+        error: function (error) {
+            console.error(error);
+        }
+    })
+</script>
 <!-- Main Menu area End-->
