update on the errors

--- a/pathfinder/templates/partials/head.html
+++ b/pathfinder/templates/partials/head.html
@@ -48,6 +48,7 @@
   <!-- style CSS
   ============================================ -->
   <link rel="stylesheet" href="/static/style.css">
+  <link href="{{ url_for('static', filename='css/errors.css') }}" rel="stylesheet">
   <!-- responsive CSS
   ============================================ -->
   <link rel="stylesheet" href="/static/css/responsive.css">
